Add SEO meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>NovaWeb Studios</title>
+    <meta name="description" content="NovaWeb Studios builds high-conversion websites, Shopify dropshipping stores, landing pages, ecommerce solutions, and branding for growing businesses." />
+
+<meta name="keywords" content="web design agency, shopify dropshipping, ecommerce website, landing page design, wordpress website, branding agency" />
+
+<meta name="author" content="NovaWeb Studios" />
+
+<meta property="og:title" content="NovaWeb Studios" />
+<meta property="og:description" content="Professional Sites. Real Results." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://novaweb-studios.vercel.app" />
+    <title>NovaWeb Studios | Professional Sites. Real Results.</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
