--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,16 @@
 <meta property="og:url" content="https://novaweb-studios.vercel.app" />
     <title>NovaWeb Studios | Professional Sites. Real Results.</title>
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S3X1ZF1VJ4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S3X1ZF1VJ4');
+</script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
