--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,25 @@
 </script>
 
   </head>
+  <a
+  href="https://wa.me/919167177538?text=Hi%20NovaWeb%20Studios,%20I%20need%20a%20website"
+  target="_blank"
+  style="
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #25d366;
+    color: white;
+    padding: 12px 16px;
+    border-radius: 50px;
+    font-weight: bold;
+    z-index: 9999;
+    text-decoration: none;
+  "
+>
+  WhatsApp Us
+</a>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
